syntax = "proto3";

package v1;

option go_package = "github.com/dritelabs/accounts/pb";

enum GrantType {
  AUTHORIZATION_CODE = 0;
  CLIENT_CREDENTIALS = 1;
  REFRESH_TOKEN = 2;
}
